--- a/source/sass/blocks/extra-goods.scss
+++ b/source/sass/blocks/extra-goods.scss
@@ -1,6 +1,6 @@
 .extra-goods__wrapper {
   width: 280px;
-  margin: 3px auto 35px;
+  margin: 6px auto 40px;
 
   @media (min-width: $tablet-width) {
     position: relative;
@@ -79,7 +79,7 @@
 
 .extra-goods__item {
   border-top: 1px solid $color-border-list4;
-  padding: 10px 0 19px;
+  padding: 10px 0 20px;
 
   &:last-child {
     border-bottom: 1px solid $color-border-list4;
@@ -117,7 +117,7 @@
 .extra-goods__row {
   display: grid;
   grid-template-columns: 140px 140px;
-  row-gap: 8px;
+  row-gap: 9px;
   color: $color-desc;
 
   @media (min-width: $tablet-width) {
@@ -188,4 +188,8 @@
 
 .extra-goods__button {
   width: 100%;
+}
+
+.extra-goods__button a {
+  padding: 10px;
 }
