--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -56,8 +56,8 @@
   @include title;
   display: grid;
   grid-template-columns: min-content auto;
-  column-gap: 15px;
-  padding: 20px 20px 20px;
+  column-gap: 20px;
+  padding: 24px;
   align-items: center;
   justify-content: center;
   font-family: $oswald400;
@@ -80,7 +80,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 3/-1;
     margin-left: 62px;
-    padding: 30px 0 64px;
+    padding: 30px 0 70px;
     word-break: break-word;
   }
 }
@@ -187,7 +187,7 @@
 
 .features__about {
   margin: 0;
-  padding: 20px;
+  padding: 0 20px 20px;
   font-size: 14px;
   line-height: 18px;
   width: 240px;
@@ -212,7 +212,7 @@
     display: block;
     width: 230px;
     height: 1px;
-    margin-top: 23px;
+    margin-top: 21px;
     background: $color-border-list2;
     content: "";
 
@@ -246,7 +246,7 @@
     grid-column: 2/4;
     grid-row: 3 / 4;
     padding: 10px 0;
-    padding: 10px 0 15px;
+    padding: 10px 0 9px;
   }
 
   &:hover,
@@ -267,10 +267,10 @@
 
 .features__link-line {
   display: inline-block;
-  margin-left: 22px;
+  margin-left: 13px;
   width: 32px;
   height: 16px;
   background-image: url("../img/svg/arrow-small.svg");
   background-repeat: no-repeat;
-  transform: translateY(3px);
+  transform: translateY(1px);
 }
