--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -11,13 +11,11 @@
     display: grid;
     margin-top: 52px;
     width: 708px;
-
   }
 
   @media (min-width: $desktop-width) {
-    display: block;
     width: 1220px;
-    margin: 48px auto 265px;
+    margin: 47px auto 265px;
   }
 }
 
@@ -34,16 +32,14 @@
     position: absolute;
     width: 320px;
     height: 302px;
-    background-image: url("../img/jpg/background-mobile.webp"),
-    url("../img/jpg/background-mobile.jpg");
+    background-image: url("../img/jpg/background-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.1;
     content: "";
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/jpg/background-mobile@2x.webp"),
-    url("../img/jpg/background-mobile@2x.jpg");
+      background-image: url("../img/jpg/background-mobile@2x.jpg");
     }
 
     @media (min-width: $tablet-width) {
@@ -79,7 +75,7 @@
   @media (min-width: $desktop-width) {
     width: 420px;
     min-height: 180px;
-    padding: 0 80px 0;
+    padding: 0 80px;
 
     &::before {
       position: absolute;
@@ -94,19 +90,17 @@
 }
 
 .offer__picture {
-  position: absolute;
-  transform: translateY(170px);
+  margin-top: -135px;
 
   @media (min-width: $tablet-width) {
-    position: static;
     transform: translateY(-85px);
     background: $color-bg-white;
   }
 
   @media (min-width: $desktop-width) {
-    position: absolute;
     background: none;
-    transform: translate(446px,-320px);
+    position: absolute;
+    transform: translate(450px,92px);
   }
 }
 
@@ -136,7 +130,7 @@
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
-  margin-bottom: 29px;
+  margin-bottom: 165px;
   color: $color-default-white;
 
   @media (min-width: $tablet-width) {
@@ -154,7 +148,7 @@
 .offer__button {
   width: 280px;
   padding: 10px 0;
-  margin: 138px 0 20px;
+  margin-bottom: 20px;
   font-size: 14px;
   line-height: 18px;
   box-sizing: border-box;
